# Game-Of-Life

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/GameOfLife/: ArrayBorderCheckBoard.hpp  FromFileFiller.hpp  GOFTypes.hpp  GameOfLife.hpp  ICheckBoard.hpp  ICheckBoardFiller.hpp  IGOF.hpp  IGOFAlgorithm.hpp  MatrixBorderCheckBoard.hpp  ParallelTorusAlgorithm.hpp  RandomFiller.hpp  SequentialTorusGOFAlgorithm.hpp  SequentialVectorTorusGOFAlgorithm.hpp  VectorBorderCheckBoard.hpp
include/GameOfLife/private/: ArrayBorderCheckBoard.hpp  ArrayCheckBoard.hpp  ICheckBoard.hpp  IGOFAlgorithm.hpp
include/GameOfLife/public/: GameOfLife.hpp
src/: GOF_benchmark.cpp  GOF_demo.cpp  GOF_graphic_demo.cpp
src/GameOfLife/: ArrayBorderCheckBoard.cpp  ArrayCheckBoard.cpp  FromFileFiller.cpp  GameOfLife.cpp  GameOfLife.hpp  IGOFAlgorithm.cpp  MatrixBorderCheckBoard.cpp  ParallelTorusAlgorithm.cpp  RandomFiller.cpp  SequentialTorusGOFAlgorithm.cpp  SequentialVectorTorusGOFAlgorithm.cpp  VectorBorderCheckBoard.cpp
